--- a/index.html
+++ b/index.html
@@ -504,11 +504,11 @@
         // URLs are now encrypted for security
         const linksData = [
             {
-                title: "Portfolio Website",
-                description: "Lihat karya dan proyek terbaru saya",
-                encryptedUrl: encryptUrl("https://portfolio.example.com"),
+                title: "Celana Sam Pria",
+                description: "",
+                encryptedUrl: encryptUrl("https://s.shopee.co.id/2g2hYWwsEN"),
                 thumbnail: "https://raw.githubusercontent.com/username/repo/main/images/portfolio.jpg",
-                icon: "fa-briefcase"
+                icon: "fa-shopping-bag"
             },
             {
                 title: "YouTube Channel",
