--- a/index.html
+++ b/index.html
@@ -504,10 +504,10 @@
         // URLs are now encrypted for security
         const linksData = [
             {
-                title: "Celana Sam Pria",
+                title: "Parfum Unisex",
                 description: "",
-                encryptedUrl: encryptUrl("https://s.shopee.co.id/2g2hYWwsEN"),
-                thumbnail: "https://raw.githubusercontent.com/username/repo/main/images/portfolio.jpg",
+                encryptedUrl: encryptUrl("https://s.shopee.co.id/30fVmqoLNp"),
+                thumbnail: "https://github.com/Salsa34/bio/blob/main/images/parfumUnisex.png",
                 icon: "fa-shopping-bag"
             },
             {
