--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
                 title: "Parfum Unisex",
                 description: "",
                 encryptedUrl: encryptUrl("https://s.shopee.co.id/30fVmqoLNp"),
-                thumbnail: "https://github.com/Salsa34/bio/blob/main/images/parfumUnisex.png",
+                thumbnail: "https://raw.githubusercontent.com/Salsa34/bio/main/images/parfumUnisex.jpg",
                 icon: "fa-shopping-bag"
             },
             {
